--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,16 +2,6 @@
 LocalMap=/Game/Example_Map
 GameName=P_HESPA
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode_C
-GlobalDefaultServerGameMode=None
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
 bSupportsPortraitOrientation=False
@@ -28,6 +18,21 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprint/GameModes/MasterGameMode.MasterGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
